kubernetes/mes-factory-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: mes-factory-nodeport-service
spec:
  type: NodePort
  selector:
    app: mes-factory
  ports:
    - name: mes-factory
      protocol: TCP
      port: 80
      targetPort: 80
