kubernetes/task-manager-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: task-manager-depl
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: task-manager
  template:
    metadata: 
      labels: 
        app: task-manager
    spec:
      containers: 
        - name: task-manager
          image: 0868436291/task_manager:first
          ports:
            - containerPort: 80
              name: task-port
          imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata: 
  name: task-manager-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: task-manager
  ports:
    - name: task-port
      protocol: TCP
      port: 80
      targetPort: 80
