kubernetes/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
    nginx.ingress.kubernetes.io/session-cookie-name: REALTIMESERVERID
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules: 
    - host: hung-quanlysanxuat.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mes-factory-clusterip-service
                port: 
                  number: 80
    - host: hung-quanlycongviec.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: task-manager-clusterip-service
                port: 
                  number: 80
